--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -26,9 +26,9 @@ Participants were sourced by adverts disseminated via an internal university mem
 
 \begin{figure}[ht]
 	\begin{center}
-		\includegraphics[width=\linewidth]{participant-f.png}
+		\includegraphics[width=\linewidth]{participant-f.jpg}
 		\caption{Participant using Mirrorshades in a user study at St Salvator's chapel.}
-		\label{participant-f.png}
+		\label{participant-f.jpg}
 	\end{center}
 \end{figure}
 
@@ -63,7 +63,7 @@ The scenarios were intended to mimic the style of exploration \& interaction tha
 	\end{center}
 \end{figure}
 
-In the traditional VR scenario participants interacted with the VR chapel using the DK1 \& Xbox controller while seated. After completing the path in the VR chapel, they removed the DK1 \& walked the same path in the RW chapel. This behaviour alludes to how VR has previously been applied to cultural heritage sites such as St Salvator's chapel, wherein visitors would have the opportunity to experience a CAVE or stationary HMD based reconstruction of the site either before or after having explored the RW site. In the PR scenario participants wore the DK1, held the Xbox controller in their right hand \& the smartphone in their left, with the laptop \& control box bundle in a satchel worn over a shoulder (see figures \ref{participant-f.png} \& \ref{participant-m.png}). They then walked the same path, but this time with the ability to transition at any time between viewing the RW chapel \& the VR chapel from the equivalent vantage point.
+In the traditional VR scenario participants interacted with the VR chapel using the DK1 \& Xbox controller while seated. After completing the path in the VR chapel, they removed the DK1 \& walked the same path in the RW chapel. This behaviour alludes to how VR has previously been applied to cultural heritage sites such as St Salvator's chapel, wherein visitors would have the opportunity to experience a CAVE or stationary HMD based reconstruction of the site either before or after having explored the RW site. In the PR scenario participants wore the DK1, held the Xbox controller in their right hand \& the smartphone in their left, with the laptop \& control box bundle in a satchel worn over a shoulder (see figures \ref{participant-f.jpg} \& \ref{participant-m.jpg}). They then walked the same path, but this time with the ability to transition at any time between viewing the RW chapel \& the VR chapel from the equivalent vantage point.
 
 In the PR scenario, participants had access to a single transition style, the transition with linear interpolation (see section \ref{transition-with-linear-interpolation}), triggered by pressing \& holding the \texttt{A} button on the Xbox controller. As mentioned in section \ref{initial-testing}, this transition emerged as the `favourite' during initial tests within the OVW group. As such, it was chosen as the only transition style for the PR scenario in this first stage of evaluation wherein the focus of the investigation was upon comparing the PR scenario to the traditional VR scenario experience \& not upon gleaning details of the merits \& drawbacks exhibited by different PR implementations. The default view on the DK1's screen was 100\% RW with the transition causing a change to 100\% VR, a situation visualised upon the combined Milgram/Waterworth model in figure \ref{focus-locus-sensus-with-virtuality-continuum-with-transition}.
 
@@ -462,9 +462,9 @@ While stage 1 of the evaluation investigated the suitability of applying a mobil
 
 \begin{figure}[ht]
 	\begin{center}
-		\includegraphics[width=\linewidth]{participant-m.png}
+		\includegraphics[width=\linewidth]{participant-m.jpg}
 		\caption{Participant using Mirrorshades in a user study at St Salvator's chapel.}
-		\label{participant-m.png}
+		\label{participant-m.jpg}
 	\end{center}
 \end{figure}
 
