--- a/07_conclusions/conclusions.tex
+++ b/07_conclusions/conclusions.tex
@@ -27,7 +27,13 @@ final quote?
 
 
 
-
+\begin{figure}[h]
+	\begin{center}
+		\includegraphics[width=\textwidth]{participant-f-4.jpg}
+		\caption{The \textit{Mirrorshades} parallel reality platform in use.}
+		\label{participant-f-4.jpg}
+	\end{center}	
+\end{figure}
 
 
 
