--- a/thesis.tex
+++ b/thesis.tex
@@ -170,6 +170,7 @@
 % ======= ======= ======= ======= ======= ======= =======
 
 \chapter{Introduction}
+\graphicspath{ {06_mirrorshades_studies_results/images/} }
 \input{01_introduction/introduction.tex}
 
 % ======= ======= ======= ======= ======= ======= =======
@@ -206,6 +207,7 @@
 % ======= ======= ======= ======= ======= ======= =======
 
 \chapter{Conclusions \& Discussion}
+\graphicspath{ {06_mirrorshades_studies_results/images/} }
 \input{07_conclusions/conclusions.tex}
 
 % ======= ======= ======= ======= ======= ======= =======
