--- a/01_introduction/introduction.tex
+++ b/01_introduction/introduction.tex
@@ -41,11 +41,18 @@ research domains
 
 
 
-PICTURE FROM EXPERIMENTS
+VIDEO FROM EXPERIMENTS
 
+A video of which is available via YouTube\footnote{\url{https://www.youtube.com/watch?v=UsDRPjDwr8A}}.
 
-
-
+%maybe participant-f-3.jpg here instead
+\begin{figure}[h]
+	\begin{center}
+		\includegraphics[width=\textwidth]{participant-f-3.jpg}
+		\caption{The \textit{Mirrorshades} parallel reality platform in use.}
+		\label{participant-f-3.jpg}
+	\end{center}	
+\end{figure}
 
 
 
