--- a/01_introduction/introduction.tex
+++ b/01_introduction/introduction.tex
@@ -11,61 +11,70 @@
 
 %=========================================================================================================
 
-Intro/italic example
+A tourist steps into a 15th century chapel. Although the chapel is in remarkable condition for a building that is over 500 years old (it is even still in active use!) it looks markedly different today than it did when it was first built, back in 1450. The tourist dons a head-mounted display, which via a pair of front mounted cameras allows her to still see where she is going as she starts to walk through the chapel. Once in the centre of the chapel, she stops walking \& presses a button on a controller in her hand. Her view of the chapel around her disappears \& is replaced with a virtual reconstruction of the chapel as it stood over 500 years ago. The view changes appropriately as she turns her head, allowing her to look all around her at how chapel used to be.
 
-section - parallel reality, defined as...
+She releases the button \& is returned to the present day \& continues walking through the chapel until she reaches the altar. She presses the button again \& once again her view switches to that of the virtual chapel, which has moved to match her new position at the altar, allowing her to inspect its 1450 counterpart.
 
-document overview
-
-contributions
-
-research domains
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-VIDEO FROM EXPERIMENTS
-
-A video of which is available via YouTube\footnote{\url{https://www.youtube.com/watch?v=UsDRPjDwr8A}}.
+This is not an augmented reality system, which superimposes virtual objects upon the real world. This is a \textbf{parallel reality} system that allows its user to switch between viewing the real world \& viewing a complete, immersive virtual environment that far exceeds the level of virtuality capable of being displayed by augmented reality.
 
 %maybe participant-f-3.jpg here instead
+%\begin{figure}[h]
+%	\begin{center}
+%		\includegraphics[width=\textwidth]{participant-f-2.jpg}
+%		\caption[foo]{The \textit{Mirrorshades} parallel reality platform in use at a 15th century chapel.\footnotemark}
+%		\label{participant-f-2.jpg}
+%	\end{center}	
+%\end{figure}
+
+\afterpage{
 \begin{figure}[h]
 	\begin{center}
-		\includegraphics[width=\textwidth]{participant-f-3.jpg}
-		\caption{The \textit{Mirrorshades} parallel reality platform in use.}
-		\label{participant-f-3.jpg}
-	\end{center}	
+	   \includegraphics[width=\textwidth]{participant-f-2.jpg}
+	\end{center}
+	\label{participant-f-2.jpg}
+	\caption{The \textit{Mirrorshades} parallel reality platform in use at a 15th century chapel. This image is taken from a video that is available to view online\protect\footnotemark\ .}
 \end{figure}
 
-
-
-
-
-
-
-
+\footnotetext{\url{https://www.youtube.com/watch?v=UsDRPjDwr8A}}
+}
 
 %=========================================================================================================
+
+\section{Parallel Reality}
+
+The central theme of this thesis is the concept of `parallel reality', defined thus;
+
+\textbf{Parallel Reality:} A system comprising two environments, one real \& the other virtual with each complete unto itself, wherein the user is granted the ability to freely transition between receiving stimuli from either.
+ 
 %=========================================================================================================
 
-Extended example goes here at the beginning.
+\section{Contributions}
+
+%=========================================================================================================
+
+\section{Research Domains}
+
+%=========================================================================================================
+
+\section{Document Overview}
+
+%=========================================================================================================
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 %=========================================================================================================
 
