--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -446,7 +446,7 @@ Whilst the system developed by this thesis features two discrete environments, o
 Thus, the system developed in this thesis cannot be considered true a XR system as it does not meet both of the distinguishing criteria. The term \textbf{parallel reality} (PR\PRfootnote{}) is proposed to describe such a system. Parallel reality is thus defined as;
 
 \begin{quote}
-	\textit{A system comprising two environments, one real \& the other virtual, each complete unto itself, wherein the user is granted the ability to transition between receiving stimuli from either.}
+	\textit{A system comprising two environments, one real \& the other virtual with each complete unto itself, wherein the user is granted the ability to freely transition between receiving stimuli from either.}
 \end{quote}
 
 Should a bidirectional information flow be introduced to a PR system, or the ability to transition between receiving stimuli from either environment be introduced into a cross reality system, one would effect \textit{parallel cross reality}.
