--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -8,6 +8,8 @@
 %=========================================================================================================
 %=========================================================================================================
 
+\label{chapter-vtw}
+
 This chapter presents the development of a preliminary PR system that combined a tablet computer, GPS, accelerometer \& magnetometer, with an OpenSim based virtual environment to allow exploration of the real world ruins of a 14th century cathedral with a virtual reconstruction of it as it stood in its prime. Cultural heritage is introduced as an ideal area for which PR systems can be applied to beneficial effect, while the accuracy of GPS tracking emerged as a constraint on this style of implementation.
 
 %=========================================================================================================
