--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -7,6 +7,7 @@
 
 %=========================================================================================================
 
+\label{chapter-eval-1}
 
 The design \& development of the Mirrorshades platform was driven both to investigate mobile PR systems as a concept in general \& to assess their suitability when applied to a particular case study as a new modality for interacting with VR content within the context of a cultural heritage site. For this purpose evaluation of the platform firstly addressed its reception compared to a `traditional' VR cultural heritage experience \& secondly studied reactions \& preferences toward different PR implementations with regards to the default view \& transition styles provided.
 
@@ -451,6 +452,8 @@ From the log data, participants displayed restricted head movement throughout th
 \\
 
 %=========================================================================================================
+
+\label{chapter-eval-2}
 
 The first stage of evaluation into the Mirrorshades platform led to the conclusion that applying a mobile PR system to a cultural heritage scenario provides an experience that is more enjoyable \& engaging than a traditional virtual heritage scenario making use of immersive VR presentation via CAVE or static HMD, while also leading participants to a greater understanding of the relationships between the RW \& VR content presented to them. While certain drawbacks in the system highlighted by the first stage of evaluation, such as the visual acuity of the video see-through solution \& the lag in the IPS, could not be iterated upon due to lack of suitable technology, other aspects of the system that affect the overall PR experience could be investigated \& these findings used to inform future PR implementations - namely the way that transitions between RW \& VR visual stimuli are performed, including whether the default view is 100\% RW or a mix of RW \& VR, as participants in stage 1 of the evaluation were furnished with only a single style of transition.
 
