--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -14,6 +14,8 @@
 %=========================================================================================================
 %=========================================================================================================
 
+\label{chapter-background}
+
 % 'Position' section from experimental plan document
 
 %\section{Introduction}
