--- a/07_conclusions/conclusions.tex
+++ b/07_conclusions/conclusions.tex
@@ -7,6 +7,8 @@
 
 %=========================================================================================================
 
+\label{chapter-conclusions}
+
 Introduction goes here.
 
 %=========================================================================================================
